@@ -18,6 +18,7 @@
     * Remove Net::SSLeay::Callback::TlsextStatus class.
     * Remove Net::SSLeay::Callback::RemoveSession class.
     * Remove Net::SSLeay::Callback::PskServer class.
+    * Remove Net::SSLeay::Callback::PskClient class.
     
 0.026 2024-12-11
   [Incompatibe Changes]
